Fix div#content collapse

--- a/css/style.css
+++ b/css/style.css
@@ -66,17 +66,20 @@ div#content {
   width: 940px;
   margin: 0px auto;
   padding: 70px 10px 10px;
+  overflow: auto;
 }
 
 div#main {
   float: left;
-  width: 640px;
+  width: 630px;
+  padding: 0 5px;
 }
 
 div#sidebar {
   float: left;
-  width: 200px;
-  padding-left: 20px;
+  width: 240px;
+  margin-left: 45px;
+  padding: 0 5px;
 }
 
 div#sidebar ul#links {
